--- a/css/styles.css
+++ b/css/styles.css
@@ -13,32 +13,140 @@
 
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
 }
 
 body {
     font-family: 'Red Hat Display', sans-serif;
+    background-image: url(/images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: 100vw 45vh;
     background-color: var(--pale-blue);
     font-size: 1.6rem;
-}
-
-/* .card {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.card-content {
+.card {
     background-color: var(--very-pale-blue);
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* text-align: center; */
+    border-radius: 15px;
+    width: 400px;
+    height: 625px;
+}
+
+.card img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px 15px 0 0;
+}
+
+.text {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.text h3 {
+    margin-bottom: 20px;
+    font-size: 25px;
+    font-weight: 900;
+    color: var(--dark-blue);
+}
+
+.text p, .icon p {
+    font-size: 16px;
+    color: var(--desaturated-blue);
+}
+
+.text p {
+    margin-right: 20px;
+    margin-left: 20px;
+    line-height: 25px;
+}
+
+.icon-text {
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 40px 0 40px 0;
+}
+
+.icon-text a {
+    color: var(--bright-blue);
+    font-size: 14px;
+    font-weight: 900;
+}
+
+.icon-text a:hover {
+    color: rgb(145, 145, 255);
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+}
+
+.icon h5 {
+    color: var(--dark-blue);
+    font-weight: 900;
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.icon svg {
+    margin-right: 20px;
+}
+
+.buttons {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    padding: 2rem;
-    max-width: 375px;
-} */
+    /* line-height: 80px; */
+}
+
+.buttons a {
+    text-decoration: none;
+}
+
+.boton-pago {
+    background-color: var(--bright-blue);
+    color: var(--very-pale-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    font-size: 14px;
+    border-radius: 10px;
+    width: 325px;
+    height: 45px;
+}
+
+.boton-pago:hover{
+    background-color: rgb(145, 145, 255);
+}
+
+.boton-cancelar {
+    color: var(--desaturated-blue);
+    font-weight: 900;
+    font-size: 14px;
+    margin-top: 32px;
+}
+
+.boton-cancelar:hover {
+    color: var(--dark-blue);
+}
+
