--- a/css/styles.css
+++ b/css/styles.css
@@ -39,9 +39,6 @@ body {
 
 .card {
     background-color: var(--very-pale-blue);
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* text-align: center; */
     border-radius: 15px;
     width: 400px;
     height: 625px;
@@ -115,7 +112,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* line-height: 80px; */
 }
 
 .buttons a {
@@ -131,6 +127,7 @@ body {
     font-weight: 900;
     font-size: 14px;
     border-radius: 10px;
+    box-shadow: 0px 13px 20px rgba(0,0,0,0.200);
     width: 325px;
     height: 45px;
 }
