--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html {
 
 body {
     font-family: 'Red Hat Display', sans-serif;
-    background-image: url(/images/pattern-background-desktop.svg);
+    background-image: url(../images/pattern-background-desktop.svg);
     background-repeat: no-repeat;
     background-size: 100vw 50vh;
     background-color: var(--pale-blue);
